--- a/index.html
+++ b/index.html
@@ -34,18 +34,10 @@
         left: 0;
         opacity: 0;
         transition: opacity 0.5s ease-in-out;
-        /* GPU acceleration otimizada para multimídia de carro */
+        /* GPU acceleration para melhor performance */
         transform: translateZ(0);
-        -webkit-transform: translateZ(0);
-        will-change: transform;
-        /* Otimizações de renderização */
-        -webkit-backface-visibility: hidden;
+        will-change: transform, opacity;
         backface-visibility: hidden;
-        -webkit-perspective: 1000;
-        perspective: 1000;
-        /* Permitir todos os gestos (rotação, zoom, arrasto) */
-        touch-action: manipulation;
-        -webkit-overflow-scrolling: touch;
         -webkit-font-smoothing: antialiased;
     }
 
@@ -2479,30 +2471,12 @@ window.initMap = function () {
             rotateControl: true,
             zoomControl: true,
             streetViewControl: false,
-            fullscreenControl: false, // Desabilitar fullscreen para performance
-            mapTypeControl: false, // Desabilitar controle de tipo de mapa
-            scaleControl: false, // Desabilitar escala
-            // Otimizações de performance para multimídia de carro
+            fullscreenControl: true,
+            // Otimizações de performance
             disableDefaultUI: false,
-            clickableIcons: false, // Desabilita cliques em POIs
-            disableDoubleClickZoom: false,
-            draggable: true,
-            scrollwheel: true,
-            minZoom: 10, // Limitar zoom mínimo para menos detalhes
-            maxZoom: 20, // Limitar zoom máximo para melhor performance
-            // Reduzir detalhes do mapa
-            styles: [
-                {
-                    featureType: "poi",
-                    elementType: "labels",
-                    stylers: [{ visibility: "off" }] // Ocultar labels de POIs
-                },
-                {
-                    featureType: "transit",
-                    elementType: "labels",
-                    stylers: [{ visibility: "off" }] // Ocultar labels de transporte
-                }
-            ]
+            clickableIcons: false, // Desabilita cliques em POIs para melhor performance
+            minZoom: 3, // Permite zoom global
+            maxZoom: 22 // Zoom máximo detalhado
         });
 
         // Inicializar serviços de rota
@@ -2517,32 +2491,12 @@ window.initMap = function () {
             }
         });
 
-        // Otimizações adicionais para performance em multimídia de carro
-        // Debounce para eventos de drag (arrasto) - melhora fluidez
-        let dragTimeout;
-        map.addListener('dragstart', () => {
-            if (dragTimeout) clearTimeout(dragTimeout);
-        });
-
-        map.addListener('drag', () => {
-            if (dragTimeout) clearTimeout(dragTimeout);
-            dragTimeout = setTimeout(() => {
-                // Força renderização após arrasto parar
-                google.maps.event.trigger(map, 'resize');
-            }, 100);
-        });
-
         // Fechar InfoWindow ao clicar no mapa (fora dos marcadores)
         map.addListener('click', () => {
             if (currentInfoWindow) {
                 currentInfoWindow.close();
                 currentInfoWindow = null;
             }
-        });
-
-        // Desabilitar animações em zoom para melhor performance
-        map.addListener('zoom_changed', () => {
-            if (dragTimeout) clearTimeout(dragTimeout);
         });
 
         console.log('Mapa criado, aguardando tiles...');
