--- a/index.html
+++ b/index.html
@@ -3039,19 +3039,18 @@ async function addDeliveryMarkers() {
                     infoWindow.open(map, marker);
                     currentInfoWindow = infoWindow;
 
-                    // Centralizar mapa suavemente SEM rotação
-                    // Salvar heading e tilt atuais
+                    // Centralizar mapa SEM rotação - captura estado atual ANTES
+                    const currentZoom = map.getZoom();
                     const currentHeading = map.getHeading() || 0;
                     const currentTilt = map.getTilt() || 0;
 
-                    // Centralizar no marcador
-                    map.panTo(position);
+                    // Usar setCenter ao invés de panTo
+                    map.setCenter(position);
 
-                    // Restaurar heading e tilt (previne rotação automática)
-                    setTimeout(() => {
-                        map.setHeading(currentHeading);
-                        map.setTilt(currentTilt);
-                    }, 0);
+                    // Restaurar orientação imediatamente
+                    map.setZoom(currentZoom);
+                    map.setHeading(currentHeading);
+                    map.setTilt(currentTilt);
                 });
 
                 // Armazenar o marcador com a chave da coordenada
@@ -3080,19 +3079,18 @@ async function addDeliveryMarkers() {
                     infoWindow.open(map, marker);
                     currentInfoWindow = infoWindow;
 
-                    // Centralizar mapa suavemente SEM rotação
-                    // Salvar heading e tilt atuais
+                    // Centralizar mapa SEM rotação - captura estado atual ANTES
+                    const currentZoom = map.getZoom();
                     const currentHeading = map.getHeading() || 0;
                     const currentTilt = map.getTilt() || 0;
 
-                    // Centralizar no marcador
-                    map.panTo(position);
+                    // Usar setCenter ao invés de panTo
+                    map.setCenter(position);
 
-                    // Restaurar heading e tilt (previne rotação automática)
-                    setTimeout(() => {
-                        map.setHeading(currentHeading);
-                        map.setTilt(currentTilt);
-                    }, 0);
+                    // Restaurar orientação imediatamente
+                    map.setZoom(currentZoom);
+                    map.setHeading(currentHeading);
+                    map.setTilt(currentTilt);
                 });
 
                 // Armazenar o marcador com a chave da coordenada
