--- a/index.html
+++ b/index.html
@@ -499,6 +499,8 @@
         object-fit: cover;
         display: block;
         background: #000;
+        /* Aumentar brilho e contraste para melhor leitura de QR Code */
+        filter: brightness(1.3) contrast(1.2);
     }
 
     #qr-video:not([src]) {
@@ -3457,8 +3459,13 @@ async function startCamera() {
     const constraints = {
         video: {
             facingMode: currentFacingMode,
-            width: { ideal: 1280 },
-            height: { ideal: 720 }
+            width: { ideal: 1920, min: 1280 },
+            height: { ideal: 1080, min: 720 },
+            frameRate: { ideal: 30 },
+            // Solicitar melhor qualidade de foco e exposição
+            focusMode: { ideal: 'continuous' },
+            exposureMode: { ideal: 'continuous' },
+            whiteBalanceMode: { ideal: 'continuous' }
         }
     };
 
@@ -3558,11 +3565,15 @@ function startScanning() {
             canvasContext.drawImage(qrVideo, 0, 0, qrCanvas.width, qrCanvas.height);
 
             // Obter dados da imagem
-            const imageData = canvasContext.getImageData(0, 0, qrCanvas.width, qrCanvas.height);
+            let imageData = canvasContext.getImageData(0, 0, qrCanvas.width, qrCanvas.height);
 
-            // Tentar decodificar QR code
+            // Aplicar processamento de imagem para melhorar detecção
+            imageData = enhanceImageForQR(imageData);
+            canvasContext.putImageData(imageData, 0, 0);
+
+            // Tentar decodificar QR code com TODAS as tentativas de inversão
             const code = jsQR(imageData.data, imageData.width, imageData.height, {
-                inversionAttempts: "dontInvert",
+                inversionAttempts: "attemptBoth", // Tentar normal E invertido
             });
 
             if (code && code.data !== lastScannedCode) {
@@ -3586,6 +3597,35 @@ function startScanning() {
             }
         }
     }, 100); // Scan a cada 100ms (10 fps)
+}
+
+// Função para melhorar imagem antes da detecção de QR Code
+function enhanceImageForQR(imageData) {
+    const data = imageData.data;
+
+    // Aumentar contraste e brilho pixel por pixel
+    for (let i = 0; i < data.length; i += 4) {
+        // Converter para escala de cinza com ponderação
+        const gray = 0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2];
+
+        // Aplicar aumento de contraste e brilho
+        let enhanced = ((gray - 128) * 1.5) + 128 + 30; // Contraste 1.5x + Brilho +30
+
+        // Limitar valores entre 0-255
+        enhanced = Math.max(0, Math.min(255, enhanced));
+
+        // Aplicar threshold para binarização (melhora QR Code)
+        const threshold = 128;
+        const binary = enhanced > threshold ? 255 : 0;
+
+        // Aplicar aos 3 canais RGB
+        data[i] = binary;     // R
+        data[i + 1] = binary; // G
+        data[i + 2] = binary; // B
+        // Alpha mantém o mesmo (data[i + 3])
+    }
+
+    return imageData;
 }
 
 // Som de beep ao detectar QR code
