--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@
         object-fit: cover;
         display: block;
         background: #000;
-        /* Aumentar brilho e contraste para melhor leitura de QR Code */
-        filter: brightness(1.3) contrast(1.2);
+        /* Leve aumento de contraste sem brilho excessivo */
+        filter: contrast(1.1);
     }
 
     #qr-video:not([src]) {
@@ -3564,17 +3564,40 @@ function startScanning() {
             // Desenhar frame atual do vídeo no canvas
             canvasContext.drawImage(qrVideo, 0, 0, qrCanvas.width, qrCanvas.height);
 
-            // Obter dados da imagem
-            let imageData = canvasContext.getImageData(0, 0, qrCanvas.width, qrCanvas.height);
+            // Obter dados da imagem original
+            const originalImageData = canvasContext.getImageData(0, 0, qrCanvas.width, qrCanvas.height);
 
-            // Aplicar processamento de imagem para melhorar detecção
-            imageData = enhanceImageForQR(imageData);
-            canvasContext.putImageData(imageData, 0, 0);
+            // ESTRATÉGIA MULTI-TENTATIVA: Tentar ler com diferentes processamentos
+            let code = null;
 
-            // Tentar decodificar QR code com TODAS as tentativas de inversão
-            const code = jsQR(imageData.data, imageData.width, imageData.height, {
-                inversionAttempts: "attemptBoth", // Tentar normal E invertido
+            // Tentativa 1: Imagem ORIGINAL (sem processamento)
+            code = jsQR(originalImageData.data, originalImageData.width, originalImageData.height, {
+                inversionAttempts: "attemptBoth",
             });
+
+            // Tentativa 2: Se não encontrou, tentar com CONTRASTE LEVE
+            if (!code) {
+                const contrastData = applyContrast(cloneImageData(originalImageData), 1.3);
+                code = jsQR(contrastData.data, contrastData.width, contrastData.height, {
+                    inversionAttempts: "attemptBoth",
+                });
+            }
+
+            // Tentativa 3: Se não encontrou, tentar com EQUALIZAÇÃO adaptativa
+            if (!code) {
+                const equalizedData = adaptiveEqualization(cloneImageData(originalImageData));
+                code = jsQR(equalizedData.data, equalizedData.width, equalizedData.height, {
+                    inversionAttempts: "attemptBoth",
+                });
+            }
+
+            // Tentativa 4: Se não encontrou, tentar com SHARPEN (nitidez)
+            if (!code) {
+                const sharpenedData = applySharpen(cloneImageData(originalImageData));
+                code = jsQR(sharpenedData.data, sharpenedData.width, sharpenedData.height, {
+                    inversionAttempts: "attemptBoth",
+                });
+            }
 
             if (code && code.data !== lastScannedCode) {
                 lastScannedCode = code.data;
@@ -3599,33 +3622,95 @@ function startScanning() {
     }, 100); // Scan a cada 100ms (10 fps)
 }
 
-// Função para melhorar imagem antes da detecção de QR Code
-function enhanceImageForQR(imageData) {
+// Clonar ImageData para não modificar o original
+function cloneImageData(imageData) {
+    const cloned = new ImageData(imageData.width, imageData.height);
+    cloned.data.set(imageData.data);
+    return cloned;
+}
+
+// Aplicar contraste ajustável
+function applyContrast(imageData, factor) {
     const data = imageData.data;
+    const contrast = (factor - 1) * 128;
 
-    // Aumentar contraste e brilho pixel por pixel
     for (let i = 0; i < data.length; i += 4) {
-        // Converter para escala de cinza com ponderação
-        const gray = 0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2];
-
-        // Aplicar aumento de contraste e brilho
-        let enhanced = ((gray - 128) * 1.5) + 128 + 30; // Contraste 1.5x + Brilho +30
-
-        // Limitar valores entre 0-255
-        enhanced = Math.max(0, Math.min(255, enhanced));
-
-        // Aplicar threshold para binarização (melhora QR Code)
-        const threshold = 128;
-        const binary = enhanced > threshold ? 255 : 0;
-
-        // Aplicar aos 3 canais RGB
-        data[i] = binary;     // R
-        data[i + 1] = binary; // G
-        data[i + 2] = binary; // B
-        // Alpha mantém o mesmo (data[i + 3])
+        data[i] = Math.min(255, Math.max(0, data[i] * factor - contrast));
+        data[i + 1] = Math.min(255, Math.max(0, data[i + 1] * factor - contrast));
+        data[i + 2] = Math.min(255, Math.max(0, data[i + 2] * factor - contrast));
     }
 
     return imageData;
+}
+
+// Equalização adaptativa (CLAHE simplificado)
+function adaptiveEqualization(imageData) {
+    const data = imageData.data;
+
+    // Converter para escala de cinza e calcular histograma
+    const histogram = new Array(256).fill(0);
+
+    for (let i = 0; i < data.length; i += 4) {
+        const gray = Math.round(0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2]);
+        histogram[gray]++;
+    }
+
+    // Calcular CDF (Cumulative Distribution Function)
+    const cdf = new Array(256);
+    cdf[0] = histogram[0];
+    for (let i = 1; i < 256; i++) {
+        cdf[i] = cdf[i - 1] + histogram[i];
+    }
+
+    // Normalizar CDF
+    const totalPixels = imageData.width * imageData.height;
+    const cdfMin = cdf.find(val => val > 0);
+
+    for (let i = 0; i < data.length; i += 4) {
+        const gray = Math.round(0.299 * data[i] + 0.587 * data[i + 1] + 0.114 * data[i + 2]);
+        const equalized = Math.round(((cdf[gray] - cdfMin) / (totalPixels - cdfMin)) * 255);
+
+        data[i] = equalized;
+        data[i + 1] = equalized;
+        data[i + 2] = equalized;
+    }
+
+    return imageData;
+}
+
+// Aplicar filtro de nitidez (sharpen)
+function applySharpen(imageData) {
+    const data = imageData.data;
+    const width = imageData.width;
+    const height = imageData.height;
+    const output = cloneImageData(imageData);
+    const outputData = output.data;
+
+    // Kernel de sharpen
+    const kernel = [
+        0, -1, 0,
+        -1, 5, -1,
+        0, -1, 0
+    ];
+
+    for (let y = 1; y < height - 1; y++) {
+        for (let x = 1; x < width - 1; x++) {
+            for (let c = 0; c < 3; c++) {
+                let sum = 0;
+                for (let ky = -1; ky <= 1; ky++) {
+                    for (let kx = -1; kx <= 1; kx++) {
+                        const idx = ((y + ky) * width + (x + kx)) * 4 + c;
+                        const kernelIdx = (ky + 1) * 3 + (kx + 1);
+                        sum += data[idx] * kernel[kernelIdx];
+                    }
+                }
+                const outIdx = (y * width + x) * 4 + c;
+                outputData[outIdx] = Math.min(255, Math.max(0, sum));
+            }
+        }
+    }
+
+    return output;
 }
 
 // Som de beep ao detectar QR code
